# magnetite

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE-MIT  README.md  build.nix  config.json  crate-hashes.json  default.nix  shell.nix
.github/workflows/: ci.yml
api/: api.proto
api/fuse/: fuse.proto
api/seed/: seed.proto
api/torrent_host/: torrent_host.proto
bencode/: .gitignore  Cargo.toml  README.md
bencode/afl/: Cargo.toml
bencode/afl/src/: main.rs
bencode/src/: error.rs  lib.rs  number.rs  ser.rs  value.rs
bencode/src/ser/: mod.rs  string.rs
bin-str/: Cargo.toml
bin-str/src/: lib.rs
common/: Cargo.toml
common/src/: bitfield.rs  handshake.rs  lib.rs  message.rs  peer.rs  storage.rs  torrent.rs  torrentinfo.rs
common/src/torrentfile/: enum_err.rs  info.rs  lib.rs  mod.rs
dht/: Cargo.toml
dht/dht-example/: Cargo.toml
dht/dht-example/src/: debug_server.rs  main.rs  search.rs
dht/dht-traffic-stats/: Cargo.toml
dht/dht-traffic-stats/src/: main.rs
dht/dht-traffic-stealer/: Cargo.toml
dht/dht-traffic-stealer/src/: main.rs
dht/src/: lib.rs  lib_ddd.rs  search.rs  tracker.rs  wire.rs
fallocate/: Cargo.toml  fallocate_gen.c
fallocate/src/: constants.rs  ffi.rs  lib.rs
heap-dist-key/: Cargo.toml
heap-dist-key/src/: lib.rs
integration-tests/: default.nix  magnetite-seeder-test.nix  magnetite-tracker-test.nix  tracker.nix
iresult/: Cargo.toml
iresult/src/: lib.rs
magnetite/: Cargo.toml  build.rs
magnetite-common/: Cargo.toml
magnetite-common/src/: bytes_cow.rs  lib.rs  proto.rs  torrent_id.rs
magnetite-model/: Cargo.toml
magnetite-model/src/: bitfield.rs  lib.rs
magnetite-single/: Cargo.toml
magnetite-single-aggregator/: Cargo.toml
magnetite-single-aggregator/migrations/: V1__initialise.rs
magnetite-single-aggregator/src/: main.rs
magnetite-single-api/: Cargo.toml  build.rs
magnetite-single-api/src/: items.proto  lib.rs
magnetite-single-client/: Cargo.toml
magnetite-single-client/src/: main.rs
magnetite-single-wrapper/: Cargo.toml
magnetite-single-wrapper/src/: main.rs
magnetite-single/src/: main.rs
magnetite-tracker/: Cargo.toml
magnetite-tracker/lib/: Cargo.toml
magnetite-tracker/lib/src/: lib.rs
magnetite-tracker/lib/src/udp/: wire.rs
magnetite-tracker/src/: main.rs
magnetite/src/: main.rs
magnetite/src/bittorrent/: mod.rs  peer_state.rs  peer_task.rs  storage.rs  torrent_task.rs
magnetite/src/clients/: mod.rs
magnetite/src/cmdlet/: mod.rs
magnetite/src/cmdlet/assemble_mse_tome/: mod.rs
magnetite/src/cmdlet/assemble_torrent/: mod.rs
magnetite/src/cmdlet/ctl/: mod.rs
magnetite/src/cmdlet/daemon/: mod.rs
magnetite/src/cmdlet/download/: mod.rs
magnetite/src/cmdlet/dump_torrent_info/: mod.rs
magnetite/src/cmdlet/fuse_mount/: adapter.rs  errors.rs  mod.rs
magnetite/src/cmdlet/host/: mod.rs
magnetite/src/cmdlet/seed/: mod.rs
magnetite/src/cmdlet/validate_mse_tome/: mod.rs
magnetite/src/cmdlet/validate_torrent_data/: mod.rs
magnetite/src/cmdlet/webserver/: mod.rs
magnetite/src/control/: messages.rs  mod.rs
magnetite/src/model/: config.rs  mod.rs
magnetite/src/model/proto/: mod.rs
magnetite/src/scheduler/: mod.rs
magnetite/src/storage/: disk_cache.rs  disk_cache_layer.rs  from_config.rs  memory_cache.rs  mod.rs  multi_file.rs  piece_file.rs  piggyback.rs  remote_magnetite.rs  root_storage_service.rs  sha_verify.rs  state_holder_system.rs  state_wrapper.rs  test_utils.rs
magnetite/src/storage/disk_cache/: cache_cleanup_linux.rs  cache_cleanup_stub.rs  mod.rs  piece_storage_engine_dumb_adapter.rs
magnetite/src/storage/remote_magnetite/: mod.rs  wire.rs
magnetite/src/storage/root_storage_service/: mod.rs
magnetite/src/tracker/: mod.rs
magnetite/src/tracker/dht/: mod.rs  search.rs  tracker.rs  wire.rs
magnetite/src/tracker/udp/: attic.rs  mod.rs
magnetite/src/utils/: bytes_cow.rs  close_waiter.rs  mod.rs  owned_fd.rs
magnetite/src/vfs/: errors.rs  file.rs  mod.rs
middle/: Cargo.toml
middle/src/: conn.rs  lib.rs  reset.rs
scraper/: Cargo.toml
scraper/src/: main.rs
src/: bitfield.rs  connection.rs  main.rs  message_types.rs
src/storage/: memory.rs  mod.rs  singlefile.rs
src/util/: mod.rs  piece.rs  ringbuf.rs  sha1.rs
suck/: Cargo.toml  README.md
suck/src/: main.rs
tracker/: Cargo.toml
tracker/src/: main.rs
util/: Cargo.toml
util/src/: lib.rs  sha1.rs
