[workspace]
resolver = "2"
members = [
	"magnetite-single",
	"magnetite-single-wrapper",
	"magnetite-single-aggregator",
	"magnetite-single-api",
	"magnetite-single-client",
	"magnetite-model",
	"bencode",
	"iresult",
	"magnetite",
	"magnetite-common",
	"magnetite-tracker",
	"magnetite-tracker/lib",
	"dht",
	"dht/dht-example",
	# "dht/dht-traffic-stealer",
	# "dht/dht-traffic-stats",
	"heap-dist-key",
	"bin-str",
	# "scraper",
]
