[package]
name = "bencode"
version = "0.0.1"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[features]
default = []
afl = []

[dependencies]
# external
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.3"
# num = "*"

# internal
iresult = { path = "../iresult" }
bin-str = { path = "../bin-str" }
