[package]
name = "dht"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
magnetite-common = { path = "../magnetite-common" }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.3"
smallvec = { version = "1.0", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "rt", "net"] }
bencode = { path = "../bencode" }
futures = "0.3"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "json"] }
