[package]
name = "magnetite-common"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.5.0", features = ["i128"] }
bytes = { version = "1.5.0", features = ["serde"] }
serde = "1.0.196"
thiserror = "1.0.56"
