[package]
name = "magnetite-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnetite-common = { path = "../magnetite-common" }
serde = "1.0.196"
thiserror = "1.0.56"
bencode = { path = "../bencode" }
sha-1 = "0.8"
failure = "0.1.8"
