[package]
name = "magnetite-single-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnetite-single-api = { path = "../magnetite-single-api" }
magnetite-common = { path = "../magnetite-common"}
magnetite-model = { path = "../magnetite-model"}

failure = "0.1.8"
prost = "0.12"
tonic = "0.11.0"
tracing = { version = "0.1.40", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
svix-ksuid = "0.8.0"
clap = "4.4.18"
reqwest = { version = "0.11.24" }
percent-encoding = "2.3.1"
refinery = { version = "0.8.12", features = ["tokio-postgres", "postgres"] }
barrel = { version = "0.7.0", features = ["pg"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "array-impls"] }
serde_json = "1.0"
