[package]
name = "magnetite-single-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
prost = "0.12"
tonic = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = { version = "0.11.0" }
