[package]
name = "magnetite-single-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnetite-single-api = { path = "../magnetite-single-api" }
magnetite-common = { path = "../magnetite-common" }
magnetite-model = { path = "../magnetite-model" }

failure = "0.1.8"
clap = "4.4.18"
tracing = { version = "0.1.40", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
