[package]
name = "magnetite-single-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
clap = "4.4.18"
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
