[package]
name = "magnetite-single"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnetite-single-api = { path = "../magnetite-single-api" }
magnetite-common = { path = "../magnetite-common" }
magnetite-model = { path = "../magnetite-model" }

bytes = { version = "1.5.0", features = ["serde"] }
clap = "4.4.18"
anyhow = "1.0.70"
rand = "0.8.5"
# tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
# prost = "0.12"
# prost-types = "0.12"
