[package]
name = "magnetite-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# internal
magnetite-common = { path = "../magnetite-common" }
magnetite-tracker-lib = { path = "lib" }
bin-str = { path = "../bin-str" }
bencode = { path = "../bencode" }

# external
clap = { version = "3.2.23", default-features = false, features = ["std"] }
hyper = { version = "0.14.24", features = ["full"] }
percent-encoding = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.3"
smallvec = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["tracing", "tracing-serde", "serde_json", "serde", "parking_lot", "env-filter", "json"] }
opentelemetry = { version = "0.18.0", features = ["metrics", "rt-tokio", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["hyper", "hyper-tls", "collector_client", "hyper_collector_client", "hyper_tls_collector_client", "tokio"] }
tracing-opentelemetry = "0.18.0"
failure = "0.1.8"
