[package]
name = "magnetite"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
# internal
bencode = { path = "../bencode" }

# external
byteorder = "1"
bytes = "0.5"
clap = "2.32"
env_logger = "0.6"
failure = "0.1.6"
fuse = { git = "https://github.com/zargony/fuse-rs" }
iresult = { path = "../iresult" }
rand = "0.7"
salsa20 = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.3"
sha-1 = "0.8"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.9"
tracing-subscriber = "0.1.5"
log = "*"
futures = "0.3.4"