[package]
name = "magnetite"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
# internal
bencode = { path = "../bencode" }
bin-str = { path = "../bin-str" }
magnetite-common = { path = "../magnetite-common" }

# external
byteorder = "1"
bytes = "0.5"
clap = "2.32"
env_logger = "0.6"
failure = "0.1.6"
fuse = { git = "https://github.com/zargony/fuse-rs", optional = true }
futures = "0.3.4"
iresult = { path = "../iresult" }
libc = "0.2.16"
log = "*"
lru = "0.4.3"
prost = "0.6"
prost-types = "0.6"
rand = "0.7"
# salsa20 = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.3"
serde_json = "1.0.83"
toml = "0.5.6"
sha-1 = "0.8"
slab = "0.4"
smallvec = "1.0"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.9"
tracing-subscriber = "0.1.5"
nix = "0.17"
rmp-serde = "0.14.3"
hyper = "0.13"
percent-encoding = "2.1"
metrics-runtime = "0.13.0"
metrics = "0.12.1"
metrics-core = "0.5.0"

[features]
default = []
with-mse = []
with-fuse = ["fuse"]

[dependencies.tonic]
git = "https://github.com/hyperium/tonic.git"
features = ["codegen", "transport", "prost"]

[build-dependencies."tonic-build"]
git = "https://github.com/hyperium/tonic.git"
features = ["prost"]
