[package]
name = "magnetite"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

[dependencies]
# internal
bencode = { path = "../bencode" }
bin-str = { path = "../bin-str" }
magnetite-common = { path = "../magnetite-common" }
magnetite-model = { path = "../magnetite-model" }

#
byteorder = "1"
bytes = "1.5.0"
clap = "3.2.23"
env_logger = "0.6"
failure = "0.1.6"
futures = "0.3.4"
iresult = { path = "../iresult" }
libc = "0.2.16"
log = "*"
lru = "0.4.3"
thiserror = "2.0.17"
# prost = "0.6"
# prost-types = "0.6"
rand = "0.7"
# salsa20 = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.3"
serde_json = "1.0.83"
toml = "0.5.6"
sha-1 = "0.8"
slab = "0.4"
smallvec = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.9"
tracing-subscriber = "0.1.5"
nix = "0.17"
rmp-serde = "0.14.3"
hyper = "0.13"
percent-encoding = "2.1"
metrics-runtime = "0.13.0"
metrics = "0.12.1"
metrics-core = "0.5.0"
anyhow = "1.0.70"
# tonic = { version = "0.9.1", features = ["codegen", "transport", "prost"] }

[features]
default = []

# [build-dependencies]
# tonic-build = { version = "0.9.1", features = ["prost"] }
