[package]
name = "suck"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]

[dependencies]
byteorder = "*"
mio = "0.4"
log = "0.3"

[dependencies.sha1]
git = "https://github.com/mitsuhiko/rust-sha1.git"

[dependencies.metorrent_common]
path = "./../common"

[dependencies.metorrent_middle]
path = "./../middle"

[dependencies.metorrent_util]
path = "./../util"