[package]
name = "tracker"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.9"
tracing-subscriber = "0.1.5"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"