[package]
name = "dht-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external
chrono = "0.4"
clap = { version = "2.33.1", default-features = false }
serde_bytes = "0.11.5"
smallvec = { version = "1.0", features = ["serde"] }
tokio = { version = "1.19.1", features = ["full"] }
tokio-stream = "0.1.9"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "json"] }
failure = "0.1"
futures = "0.3.21"
hyper = { version = "0.14.19", features = ["full"] }
rand = "0.8.5"

# interal
dht = { path = ".." }
bencode = { path = "../../bencode" }
magnetite-common = { path = "../../magnetite-common" }
