[package]
name = "magnetite-tracker-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
magnetite-common = { path = "../../magnetite-common" }
heap-dist-key = { path = "../../heap-dist-key" }

# external
smallvec = "1.0"
rand = "0.8.5"
